<resources>
    <string name="app_name">ThemePark</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="theme_park_social">Theme Park Social</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_signing_up_you_have_agree_to_our">By signing up you have agree to our</string>
    <string name="terms_of_use_amp_privacy_policy"><![CDATA[Terms of Use & Privacy Policy]]></string>
    <string name="email_username">Email/Username:</string>
    <string name="enter_your_email_or_username">Enter your email or username</string>
    <string name="recover">Recover</string>
    <string name="new_password">New Password:</string>
    <string name="enter_your_new_password">Enter your new Password</string>
    <string name="confirm_passwords">Confirm Password:</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="change_location">Change Location</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="receive_newsletters">Receive newsletters</string>
    <string name="receive_special_offers">Receive special offers</string>
    <string name="participation_in_beta_program">Participation in Beta Program</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend code</string>
    <string name="product_designer">Product Designer</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="enter_text">Enter Text</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
</resources>