<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/theme_park_social"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:text="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/tvNewPassword"
        android:id="@+id/etNewPassword"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_your_new_password"
        android:paddingHorizontal="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:text="@string/confirm_passwords"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"
        android:id="@+id/etConfirmPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_your_confirm_password"
        android:paddingHorizontal="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"/>



</androidx.constraintlayout.widget.ConstraintLayout>