<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_park_social"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_username"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/tvForgotEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_your_email_or_username"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/recover"
        android:textSize="@dimen/_15ssp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>