<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_15sdp"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/theme_park_social"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:text="@string/sign_up"
            android:textColor="@color/grey707070"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_70sdp"
            android:text="@string/login"
            android:textColor="@color/grey707070"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/llButton">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/profile_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey707070"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/grey707070" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/hero_password"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey707070"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/grey707070" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/remember_me"
                android:textColor="@color/grey707070" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_70sdp"
                android:text="@string/forgot_password" />

        </LinearLayout>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvorConnectWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/or_connect_with"
            android:textColor="@color/grey707070" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvorConnectWith">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/fb" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/twiter" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/googlee" />

        </LinearLayout>
    </LinearLayout>

    <!--    Signup-->

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/llButton">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/profile_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey707070"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/grey707070" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/hero_email"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey707070"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/grey707070" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/hero_password"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey707070"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/grey707070" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/hero_password"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/grey707070"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColorHint="@color/grey707070" />

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbRememberMe" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/by_signing_up_you_have_agree_to_our"
            android:textColor="@color/grey707070" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/terms_of_use_amp_privacy_policy"
            android:textColor="@color/blue" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>