<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_text"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMessage" />


    <LinearLayout
        android:id="@+id/llMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:backgroundTint="@color/redE72847"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:backgroundTint="@color/redE72847"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>